:sparkles: flex-wrap content

--- a/flex-wrap/index.html
+++ b/flex-wrap/index.html
@@ -8,6 +8,25 @@
   <link rel="stylesheet" href="flex.css">
 </head>
 <body>
-  
+  <h1>Nowrap</h1>
+  <div class="container-nowrap">
+    <div class="nowrap">testandoitem1</div>
+    <div class="nowrap">testedoitem2</div>
+    <div class="nowrap">testedoitem3</div>
+  </div>
+
+  <h1>Wrap</h1>
+  <div class="container-wrap">
+    <div class="wrap">testedoitem1</div>
+    <div class="wrap">testedoitem2</div>
+    <div class="wrap">testedoitem3</div>
+  </div>
+
+  <h1>Wrap-reverse</h1>
+  <div class="container-wrap-reverse">
+    <div class="wrap-reverse">testedoitem1</div>
+    <div class="wrap-reverse">testedoitem2</div>
+    <div class="wrap-reverse">testedoitem3</div>
+  </div>
 </body>
 </html>
